--- a/com_biblestudy/admin/models/forms/admin.xml
+++ b/com_biblestudy/admin/models/forms/admin.xml
@@ -53,8 +53,8 @@
 			<option value="0">JNO</option>
 			<option value="1">JYES</option>
 		</field>
-		<field name="download_use_button_icon" label="JBS_ADDON_LEGACY_DOWNLOAD_USE_BUTTON"
-		       description="JBS_ADDON_LEGACY_DOWNLOAD_USE_BUTTON_DESC" class="inputbox" type="list" size="15" default=""
+		<field name="download_use_button_icon" label="JBS_ADDON_DOWNLOAD_USE_BUTTON"
+		       description="JBS_ADDON_DOWNLOAD_USE_BUTTON_DESC" class="inputbox" type="list" size="15" default=""
 		       labelclass="control-label">
 			<option value="">JBS_CMN_DEFAULT_DOWNLOAD</option>
 			<option value="1">JBS_MED_NONE</option>
@@ -63,11 +63,11 @@
 			<option value="4">JBS_MED_ICON_ONLY</option>
 		</field>
 
-		<field name="download_button_text" type="text" default="Audio" label="JBS_ADDON_LEGACY_BUTTON_TEXT"
-		       description="JBS_ADDON_LEGACY_BUTTON_TEXT_DESC" labelclass="control-label"/>
+		<field name="download_button_text" type="text" default="Audio" label="JBS_ADDON_BUTTON_TEXT"
+		       description="JBS_ADDON_BUTTON_TEXT_DESC" labelclass="control-label"/>
 		<field name="download_button_type" type="list" class="inputbox" size="15" default=""
-		       label="JBS_ADDON_LEGACY_BUTTON_TYPE"
-		       description="JBS_ADDON_LEGACY_BUTTON_TYPE_DESC" labelclass="control-label">
+		       label="JBS_ADDON_BUTTON_TYPE"
+		       description="JBS_ADDON_BUTTON_TYPE_DESC" labelclass="control-label">
 			<option value="btn-link">JBS_MED_NO_COLOR</option>
 			<option value="btn-primary">JBS_MED_PRIMARY</option>
 			<option value="btn-success">JBS_MED_SUCCESS</option>
@@ -75,21 +75,21 @@
 			<option value="btn-warning">JBS_MED_WARNING</option>
 			<option value="btn-danger">JBS_MED_DANGER</option>
 		</field>
-		<field name="download_button_color" type="color" description="JBS_ADDON_LEGACY_BUTTON_COLOR_DESC"
-		       label="JBS_ADDON_LEGACY_BUTTON_COLOR" labelclass="control-label"/>
+		<field name="download_button_color" type="color" description="JBS_ADDON_BUTTON_COLOR_DESC"
+		       label="JBS_ADDON_BUTTON_COLOR" labelclass="control-label"/>
 		<field name="download_icon_type" type="list" class="inputbox" size="15" default=""
-		       label="JBS_ADDON_LEGACY_ICON_TYPE"
-		       description="JBS_ADDON_LEGACY_ICON_TYPE_DESC" labelclass="control-label">
-			<option value="fa fa-download">JBS_DOWNLOAD_1</option>
-			<option value="fa fa-arrow-down">JBS_DOWNLOAD_2</option>
-			<option value="fa fa-chevron-circle-down">JBS_DOWNLOAD_3</option>
-			<option value="fa fa-long-arrow-down">JBS_DOWNLOAD_4</option>
+		       label="JBS_ADDON_ICON_TYPE"
+		       description="JBS_ADDON_ICON_TYPE_DESC" labelclass="control-label">
+			<option value="fas fa-download">JBS_DOWNLOAD_1</option>
+			<option value="fas fa-arrow-down">JBS_DOWNLOAD_2</option>
+			<option value="fas fa-chevron-circle-down">JBS_DOWNLOAD_3</option>
+			<option value="fas fa-long-arrow-down">JBS_DOWNLOAD_4</option>
 			<option value="1">JBS_MED_CUSTOM</option>
 		</field>
-		<field name="download_custom_icon" type="text" default="" label="JBS_ADDON_LEGACY_CUSTOM_ICON"
-		       description="JBS_ADDON_LEGACY_CUSTOM_ICON_DESC" labelclass="control-label"/>
-		<field name="download_icon_text_size" type="text" default="24" label="JBS_ADDON_LEGACY_FONT_SIZE"
-		       description="JBS_ADDON_LEGACY_FONT_SIZE_DESC" labelclass="control-label"/>
+		<field name="download_custom_icon" type="text" default="" label="JBS_ADDON_CUSTOM_ICON"
+		       description="JBS_ADDON_CUSTOM_ICON_DESC" labelclass="control-label"/>
+		<field name="download_icon_text_size" type="text" default="24" label="JBS_ADDON_FONT_SIZE"
+		       description="JBS_ADDON_FONT_SIZE_DESC" labelclass="control-label"/>
 		<field name="default_download_image" type="media" size="50" label="JBS_ADM_DOWNLOAD_IMAGE"
 		       description="JBS_ADM_DOWNLOAD_IMAGE_DESC" labelclass="control-label"/>
 
@@ -358,19 +358,19 @@
 		       label="JBS_ADM_MEDIA_IMAGES" size="20">
 			<option value="-1">JBS_SELECT_IMAGE</option>
 		</field>
-		<field name="media_use_button_icon" label="JBS_ADDON_LEGACY_MEDIA_USE_BUTTON"
-		       description="JBS_ADDON_LEGACY_MEDIA_USE_BUTTON_DESC" class="inputbox" labelclass="control-label"
+		<field name="media_use_button_icon" label="JBS_ADDON_MEDIA_USE_BUTTON"
+		       description="JBS_ADDON_MEDIA_USE_BUTTON_DESC" class="inputbox" labelclass="control-label"
 		       type="list" size="15" default="">
 			<option value="">JBS_MED_NONE</option>
 			<option value="1">JBS_MED_BUTTON_ONLY</option>
 			<option value="2">JBS_MED_BUTTON_AND_ICON</option>
 			<option value="3">JBS_MED_ICON_ONLY</option>
 		</field>
-		<field name="media_button_text" type="text" default="Audio" label="JBS_ADDON_LEGACY_BUTTON_TEXT"
-		       description="JBS_ADDON_LEGACY_BUTTON_TEXT_DESC" class="inputbox" labelclass="control-label"/>
+		<field name="media_button_text" type="text" default="Audio" label="JBS_ADDON_BUTTON_TEXT"
+		       description="JBS_ADDON_BUTTON_TEXT_DESC" class="inputbox" labelclass="control-label"/>
 		<field name="media_button_type" type="list" class="inputbox" labelclass="control-label" size="15" default=""
-		       label="JBS_ADDON_LEGACY_BUTTON_TYPE"
-		       description="JBS_ADDON_LEGACY_BUTTON_TYPE_DESC">
+		       label="JBS_ADDON_BUTTON_TYPE"
+		       description="JBS_ADDON_BUTTON_TYPE_DESC">
 			<option value="btn-link">JBS_MED_NO_COLOR</option>
 			<option value="btn-primary">JBS_MED_PRIMARY</option>
 			<option value="btn-success">JBS_MED_SUCCESS</option>
@@ -378,16 +378,16 @@
 			<option value="btn-warning">JBS_MED_WARNING</option>
 			<option value="btn-danger">JBS_MED_DANGER</option>
 		</field>
-		<field name="media_button_color" type="color" description="JBS_ADDON_LEGACY_BUTTON_COLOR_DESC"
-		       label="JBS_ADDON_LEGACY_BUTTON_COLOR" class="inputbox" labelclass="control-label"/>
+		<field name="media_button_color" type="color" description="JBS_ADDON_BUTTON_COLOR_DESC"
+		       label="JBS_ADDON_BUTTON_COLOR" class="inputbox" labelclass="control-label"/>
 		<field name="media_icon_type" type="icontype" class="inputbox" labelclass="control-label" size="15" default=""
-		       label="JBS_ADDON_LEGACY_ICON_TYPE"
-		       description="JBS_ADDON_LEGACY_ICON_TYPE_DESC">
+		       label="JBS_ADDON_ICON_TYPE"
+		       description="JBS_ADDON_ICON_TYPE_DESC">
 		</field>
-		<field name="media_custom_icon" type="text" default="" label="JBS_ADDON_LEGACY_CUSTOM_ICON"
-		       description="JBS_ADDON_LEGACY_CUSTOM_ICON_DESC" class="inputbox" labelclass="control-label"/>
-		<field name="media_icon_text_size" type="text" default="24" label="JBS_ADDON_LEGACY_FONT_SIZE"
-		       description="JBS_ADDON_LEGACY_FONT_SIZE_DESC" class="inputbox" labelclass="control-label"/>
+		<field name="media_custom_icon" type="text" default="" label="JBS_ADDON_CUSTOM_ICON"
+		       description="JBS_ADDON_CUSTOM_ICON_DESC" class="inputbox" labelclass="control-label"/>
+		<field name="media_icon_text_size" type="text" default="24" label="JBS_ADDON_FONT_SIZE"
+		       description="JBS_ADDON_FONT_SIZE_DESC" class="inputbox" labelclass="control-label"/>
 		<field name="media_image" type="media" directory="biblestudy"
 		       label="JBS_CMN_IMAGE" description="JBS_MED_IMAGE_DESC"
 		       class="inputbox span6" labelclass="control-label">
